--- a/src/componetes/NavBar/navbar.css
+++ b/src/componetes/NavBar/navbar.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #222;
+  background-color: #5344f3;
   color: white;
   padding: 10px 20px;
 }
