--- a/src/componetes/ItemCount/ItemCount.css
+++ b/src/componetes/ItemCount/ItemCount.css
@@ -6,24 +6,43 @@
   margin-top: 1rem;
 }
 
-.item-count-container .counter-buttons {
+.counter-buttons {
   display: flex;
   align-items: center;
-  gap: 0.5rem;
-}
-
-.item-count-container button {
-  background-color: transparent;
+  gap: 0;
   border: 1px solid #ccc;
   border-radius: 4px;
-  cursor: pointer;
+  overflow: hidden;
+}
+.counter-buttons button {
+  background-color: transparent;
+  border: none;
   padding: 0.5rem 1rem;
+  cursor: pointer;
   font-size: 1rem;
 }
 
-.item-count-container .add-to-cart-btn {
+.counter-buttons span {
+  padding: 0.5rem 0.5rem;
+  border-left: 1px solid #ccc;
+  border-right: 1px solid #ccc;
+  min-width: 40px;
+  text-align: center;
+}
+
+.add-to-cart-btn {
   background-color: #28a745;
   color: white;
-  border: none;
   font-weight: bold;
+
+  border: none;
+  padding: 0.5rem 1rem;
+  border-radius: 4px;
+
+  cursor: pointer;
+  width: 100%;
+}
+
+.add-to-cart-btn:hover {
+  background-color: #218838;
 }
